Fixing dimensions and scrollbar in MAIN important BUG!!!!

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,11 +1,11 @@
 /* General */
+
 html {
     width: 100%;
-    height: fit-content;
+    height: 100%;
 }
 
 body {
-    
     color: #FFFFFF;
     background-color: black;
 }
@@ -270,7 +270,8 @@ body,
 
 .main {
     flex: 100% 1;
-    margin: 24px 40px 50px 31px;
+    height: 100%;
+    margin: 24px 40px 0px 31px;
 }
 
 .main__bot {
@@ -282,6 +283,8 @@ body,
     grid-template-columns: repeat(3, 1fr);
     grid-template-areas: 'card card card';
     gap: 24px;
+    height: 80vh;
+    overflow-y: auto;
 }
 
 .main__card {
@@ -305,9 +308,13 @@ body,
 
 .main__image-box {
     height: 204.25px;
+}
+
+.main__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 10px 10px 0px 0px;
-    background-image: url(/src/assets/images/img/card-pic.jpg);
-    background-position: center;
 }
 
 /*Titles*/
@@ -502,21 +509,69 @@ body,
 
 /* Media queries */
 
-@media (max-width: 1166px) {
-    .main__ul {
+@media (max-width: 1300px) {
+    .main__ul-grid {
         grid-template-columns: repeat(2, 1fr);
         grid-template-areas: 'card card';
     }
 }
 
-@media (max-width: 1024px) {
-    .main__ul {}
+@media (max-width: 800px) {
+    .main__ul-grid {
+        grid-template-columns: 1fr;
+        grid-template-areas: 'card';
+    }
 }
 
-@media (max-width: 873px) {
+@media (max-width: 1000px) {
     .main__ul {
         grid-template-columns: 1fr;
         grid-template-areas: 'card';
+    }
+}
+
+
+/* Just playing */
+
+@media (min-width: 1900px) {
+    .main__ul-grid {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-areas: 'card card card card';
+    }
+}
+
+@media (min-width: 2250px) {
+    .main__ul-grid {
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-areas: 'card card card card card';
+    }
+}
+
+@media (min-width: 2750px) {
+    .main__ul-grid {
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-areas: 'card card card card card card';
+    }
+}
+
+@media (min-width: 3250px) {
+    .main__ul-grid {
+        grid-template-columns: repeat(7, 1fr);
+        grid-template-areas: 'card card card card card card card';
+    }
+}
+
+@media (min-width: 3600px) {
+    .main__ul-grid {
+        grid-template-columns: repeat(8, 1fr);
+        grid-template-areas: 'card card card card card card card card';
+    }
+}
+
+@media (min-width: 4000px) {
+    .main__ul-grid {
+        grid-template-columns: repeat(9, 1fr);
+        grid-template-areas: 'card card card car card card card card card';
     }
 }
 
